# GenericSolver

./: CMakeLists.txt  README.md
src/: main.cpp
src/board/: board.cpp  board.h  knightstourboard.cpp  knightstourboard.h  position2d.cpp  position2d.h  position2d.h.gch
src/solver/: knightstoursolver.cpp  knightstoursolver.h  solver.cpp  solver.h
